--- a/app/src/main/res/layout/activity_muckpot.xml
+++ b/app/src/main/res/layout/activity_muckpot.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,161 +7,181 @@
     android:orientation="vertical"
     tools:context=".Muckpot">
 
-    <!--툴바 영역 시작-->
-    <androidx.appcompat.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="#FF9800">
-
-        <LinearLayout
-            android:layout_marginRight="15dp"
-            android:gravity="center_vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:src="@android:color/holo_blue_bright"
-                android:layout_width="30dp"
-                android:layout_height="30dp"/>
-
-            <LinearLayout
-                android:gravity="center"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:text="먹팟"
-                    android:textColor="#fff"
-                    android:textSize="20dp"
-                    android:textStyle="bold"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
-
-            <ImageView
-                android:src="@android:color/holo_blue_bright"
-                android:layout_width="30dp"
-                android:layout_height="30dp"/>
-
-            <ImageView
-                android:layout_marginLeft="5dp"
-                android:src="@android:color/holo_blue_bright"
-                android:layout_width="30dp"
-                android:layout_height="30dp"/>
-        </LinearLayout>
-    </androidx.appcompat.widget.Toolbar>
-
-    <!--컨텐츠 영역 시작-->
-    <ScrollView
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <!-- 리스트 전체 레이아웃 -->
-        <LinearLayout
-            android:orientation="vertical"
+        <!--툴바 영역 시작-->
+        <androidx.appcompat.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="#FF9800">
+
+            <LinearLayout
+                android:layout_marginRight="15dp"
+                android:gravity="center_vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:src="@android:color/holo_blue_bright"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"/>
+
+                <LinearLayout
+                    android:gravity="center"
+                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:text="먹팟"
+                        android:textColor="#fff"
+                        android:textSize="20dp"
+                        android:textStyle="bold"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+
+                <ImageView
+                    android:src="@android:color/holo_blue_bright"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"/>
+
+                <ImageView
+                    android:layout_marginLeft="5dp"
+                    android:src="@android:color/holo_blue_bright"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"/>
+            </LinearLayout>
+        </androidx.appcompat.widget.Toolbar>
+
+        <!--컨텐츠 영역 시작-->
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <!-- 한 개의 먹팟 레이아웃 -->
+            <!-- 리스트 전체 레이아웃 -->
             <LinearLayout
-                android:layout_margin="15dp"
-                android:gravity="center"
-                android:orientation="horizontal"
+                android:id="@+id/muck_list"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
-                android:layout_height="120dp">
+                android:layout_height="match_parent">
 
-                <!-- 먹팟 썸네일 이미지 -->
-                <ImageView
-                    android:id="@+id/muck_Img"
-                    android:src="@drawable/ic_launcher_background"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"/>
-
-                <!-- 텍스트 전체 레이아웃 -->
+                <!-- 한 개의 먹팟 레이아웃 -->
                 <LinearLayout
-                    android:gravity="center_vertical"
-                    android:layout_marginLeft="20dp"
-                    android:orientation="vertical"
+                    android:layout_margin="15dp"
+                    android:gravity="center"
+                    android:orientation="horizontal"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="120dp">
 
-                    <!-- 제목 라인 레이아웃 -->
+                    <!-- 먹팟 썸네일 이미지 -->
+                    <ImageView
+                        android:id="@+id/muck_Img"
+                        android:src="@drawable/ic_launcher_background"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"/>
+
+                    <!-- 텍스트 전체 레이아웃 -->
                     <LinearLayout
-                        android:orientation="horizontal"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                        android:gravity="center_vertical"
+                        android:layout_marginLeft="20dp"
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
 
+                        <!-- 제목 라인 레이아웃 -->
+                        <LinearLayout
+                            android:orientation="horizontal"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+
+                            <TextView
+                                android:id="@+id/muck_Title"
+                                android:textSize="18dp"
+                                android:text="제목"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+
+                            <TextView
+                                android:id="@+id/muck_Time"
+                                android:textSize="13dp"
+                                android:text="시간"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+                        </LinearLayout>
+
+                        <!-- 내용 미리보기 -->
                         <TextView
-                            android:id="@+id/muck_Title"
-                            android:textSize="18dp"
-                            android:text="제목"
+                            android:id="@+id/muck_TextPreview"
+                            android:textSize="15dp"
+                            android:layout_marginTop="18dp"
+                            android:layout_marginBottom="18dp"
+                            android:text="내용"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"/>
 
-                        <TextView
-                            android:id="@+id/muck_Time"
-                            android:textSize="13dp"
-                            android:text="시간"
+                        <!-- 위치 라인 레이아웃 -->
+                        <LinearLayout
+                            android:orientation="horizontal"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                    </LinearLayout>
+                            android:layout_height="wrap_content">
 
-                    <!-- 내용 미리보기 -->
-                    <TextView
-                        android:id="@+id/muck_TextPreview"
-                        android:textSize="15dp"
-                        android:layout_marginTop="18dp"
-                        android:layout_marginBottom="18dp"
-                        android:text="내용"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                            <TextView
+                                android:id="@+id/muck_Location"
+                                android:textSize="13dp"
+                                android:text="위치"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
 
-                    <!-- 위치 라인 레이아웃 -->
-                    <LinearLayout
-                        android:orientation="horizontal"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
+                            <View
+                                android:layout_weight="10"
+                                android:layout_width="0dp"
+                                android:layout_height="0dp"/>
 
-                        <TextView
-                            android:id="@+id/muck_Location"
-                            android:textSize="13dp"
-                            android:text="위치"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
+                            <ImageView
+                                android:src="@drawable/ic_launcher_background"
+                                android:layout_width="17dp"
+                                android:layout_height="17dp"/>
 
-                        <View
-                            android:layout_weight="10"
-                            android:layout_width="0dp"
-                            android:layout_height="0dp"/>
+                            <View
+                                android:layout_weight="0.4"
+                                android:layout_width="0dp"
+                                android:layout_height="0dp"/>
 
-                        <ImageView
-                            android:src="@drawable/ic_launcher_background"
-                            android:layout_width="17dp"
-                            android:layout_height="17dp"/>
-
-                        <View
-                            android:layout_weight="0.4"
-                            android:layout_width="0dp"
-                            android:layout_height="0dp"/>
-
-                        <TextView
-                            android:id="@+id/muck_TotalMember"
-                            android:textSize="13dp"
-                            android:text="1/5"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
+                            <TextView
+                                android:id="@+id/muck_TotalMember"
+                                android:textSize="13dp"
+                                android:text="1/5"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"/>
+                        </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
-            </LinearLayout>
 
-            <!-- 구분선 -->
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_centerInParent="true"
-                android:background="#AFAFAF"/>
-        </LinearLayout>
-    </ScrollView>
-</LinearLayout>
+                <!-- 구분선 -->
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_centerInParent="true"
+                    android:background="#AFAFAF"/>
+            </LinearLayout>
+        </ScrollView>
+    </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/muck_WriteBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="20dp"
+        android:layout_marginRight="20dp"
+        android:backgroundTint="#f78025"
+        android:src="@drawable/write"
+        app:borderWidth="0dp"
+        app:fabSize="normal"/>
+</RelativeLayout>
