--- a/app/src/main/res/layout/activity_muckpot__detail.xml
+++ b/app/src/main/res/layout/activity_muckpot__detail.xml
@@ -21,9 +21,10 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:src="@android:color/holo_blue_bright"
-                android:layout_width="30dp"
-                android:layout_height="30dp"/>
+                android:id="@+id/muckDetail_BackBtn"
+                android:src="@drawable/back"
+                android:layout_width="20dp"
+                android:layout_height="20dp"/>
 
             <LinearLayout
                 android:gravity="center"
@@ -76,7 +77,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:id="@+id/feed_profile"
+                        android:id="@+id/muck_profile"
                         android:layout_weight="0"
                         android:layout_width="50dp"
                         android:layout_height="50dp"
